--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Junuba - Networking Blog"
-author: "Simon Brooks"
-description: "Junuba - Networking Blog." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "Junuba"
+author: "Simon B"
+description: "A blog about networking technologies." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
